--- a/views/generator_vox.pug
+++ b/views/generator_vox.pug
@@ -1,7 +1,7 @@
 html
   head
-    script(src='/three.js')
-    script(src='/vox.js')
+    script(src='/three.min.js')
+    script(src='/vox.min.js')
     script.
       !{data}
 
