--- a/views/generator_p5js.pug
+++ b/views/generator_p5js.pug
@@ -1,23 +1,32 @@
 html
   head
-    script(src='/p5.js')
+    meta(charset="UTF-8")
+    meta(name="viewport", content="width=device-width, initial-scale=1")
+    title p5js renderer
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js", integrity="sha512-WzkwpdWEMAY/W8WvP9KS2/VI6zkgejR4/KTxTl4qHx0utqeyVE0JY+S1DlMuxDChC7x0oXtk/ESji6a0lP/Tdg==", crossorigin="anonymous", referrerpolicy="no-referrer")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/p5.min.js", integrity="sha512-pgK6Wo8doipc/IPQ0ilH3b47ww01345nR9ud1/6Qp0n+lQlEW9zuw6JhysRcUpBY4yKuVZjn1MAkDxbnncuGsQ==", crossorigin="anonymous", referrerpolicy="no-referrer")
     script.
-      !{data}
+      !{tokenData}
     script.
       !{script}
-    style(type="text/css").
-      body {
-        margin: 0;
-        padding: 0;
-      }
-      canvas {
-        padding: 0;
-        margin: auto;
-        display: block;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-      }
+  style(type="text/css").
+    body {
+    margin: 0;
+    padding: 0;
+    }
     
+    canvas {
+    padding: 5px;
+    margin: auto;
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 5px;
+    }
+  body
+    canvas
+  script(src="https://code.jquery.com/jquery-3.5.1.slim.min.js", integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj", crossorigin="anonymous")
+  script(src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js", integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo", crossorigin="anonymous")
