--- a/views/generator_js.pug
+++ b/views/generator_js.pug
@@ -1,7 +1,6 @@
 html
   head
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/three.js/0.160.0/three.min.js')
-    title threejs
+    title js
     script.
       #{data}
     script(type='text/javascript').
