--- a/views/home.pug
+++ b/views/home.pug
@@ -1,6 +1,6 @@
 html
   body
-    h1 Welcome to the DiGi Gallery API/server.
+    h1 Welcome to the DiGi Gallery Generator Server.
     br
     ul
     li Overall platform information
@@ -8,5 +8,3 @@ html
     li Token URI displays all relevant token data: https://api.digigallery.xyz/token/[TOKEN ID GOES HERE]
     li Token Image displays a server side rendered (and cached) image of the token: https://api.digigallery.xyz/image/[TOKEN ID GOES HERE]
     li Generator enters live script for each token injecting the project script, token stored hashes, and the script library (stored locally of via CDN): https://api.digigallery.xyz/generator/[TOKEN ID GOES HERE]
-    li If token is a VOX model it will be served directly by: https://api.digigallery.xyz/vox/[TOKEN ID GOES HERE]
-    p Contact: info@digigallery.xyz
