--- a/views/generator_aframe.pug
+++ b/views/generator_aframe.pug
@@ -1,23 +1,27 @@
 html
   head
-    script(src='/aframe.min.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/aframe/1.4.2/aframe.min.js')
+    title aframe
     script.
-      !{data}
-    style(type="text/css").
+      #{data}
+    script(type='text/javascript').
+      #{script}
+    script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js', integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj', crossorigin='anonymous')
+    script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js', integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo', crossorigin='anonymous')
+    style(type='text/css').
       body {
-        margin: 0;
-        padding: 0;
+      margin: 0;
+      padding: 0;
       }
       canvas {
-        padding: 0;
-        margin: auto;
-        display: block;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
+      padding: 10px;
+      margin: auto;
+      display: block;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
       }
   body
-    | !{script}
     canvas
