--- a/views/platformInfo.pug
+++ b/views/platformInfo.pug
@@ -3,8 +3,7 @@ html
     h1 Name: #{name}
     h3 Symbol: #{symbol}
     h3 Address:
-      a(href="https://www.etherscan.io/address/"+address) #{address}
+      a(href="https://www.sepolia.etherscan.io/address/"+address) #{address}
     hr
-    p Total Invocations: #{totalSupply}
     p Projects List: #{projects}
     p Next Project Id: #{nextProjectId}
