--- a/views/home.pug
+++ b/views/home.pug
@@ -1,10 +1,10 @@
 html
   body
-    h1 Welcome to the DiGi Gallery Generator Server.
+    h1 Welcome to the DiGi Gallery Server.
     br
     ul
     li Overall platform information
     li Project dashboard displays current details for each project: https://api.digigallery.xyz/project/[PROJECT ID GOES HERE]
-    li Token URI displays all relevant token data: https://api.digigallery.xyz/token/[TOKEN ID GOES HERE]
-    li Token Image displays a server side rendered (and cached) image of the token: https://api.digigallery.xyz/image/[TOKEN ID GOES HERE]
+    li Token URI displays all relevant token data: https://api.digigallery.xyz/[TOKEN ID GOES HERE]
+    li Token Image displays a server side rendered (and cached) image of the token: https://token.digigallery.xyz/image/[TOKEN ID GOES HERE]
     li Generator enters live script for each token injecting the project script, token stored hashes, and the script library (stored locally of via CDN): https://api.digigallery.xyz/generator/[TOKEN ID GOES HERE]
