--- a/views/generator_js.pug
+++ b/views/generator_js.pug
@@ -1,8 +1,11 @@
 html
   head
     title js
-    script.
-      #{data}
+    script (type='text/javascript').
+      let tokenData = {
+      	hash: ${"hash"}
+      	tokenId: ${tokenId}
+      }
     script(type='text/javascript').
       #{script}
     script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js', integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj', crossorigin='anonymous')
