--- a/views/generator_zdog.pug
+++ b/views/generator_zdog.pug
@@ -2,8 +2,11 @@ html
   head
     script(src='https://unpkg.com/zdog@1/dist/zdog.dist.min.js')
     title zdog
-    script.
-      #{data}
+    script (type='text/javascript').
+      let tokenData = {
+      	hash: ${"hash"}
+      	tokenId: ${tokenId}
+      }
     script(type='text/javascript').
       #{script}
     script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js', integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj', crossorigin='anonymous')
