--- a/views/generator_tonejs.pug
+++ b/views/generator_tonejs.pug
@@ -3,10 +3,7 @@ html
     script(src='https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js')
     title tonejs
     script (type='text/javascript').
-      let tokenData = {
-      	hash: ${"hash"}
-      	tokenId: ${tokenId}
-      }
+      #{data}
     script(type='text/javascript').
       #{script}
     script(src='https://code.jquery.com/jquery-3.5.1.slim.min.js', integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj', crossorigin='anonymous')
