--- a/views/generator_p5js.pug
+++ b/views/generator_p5js.pug
@@ -5,10 +5,7 @@ html
     title p5js
     script (src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/p5.min.js', integrity='sha512-pgK6Wo8doipc/IPQ0ilH3b47ww01345nR9ud1/6Qp0n+lQlEW9zuw6JhysRcUpBY4yKuVZjn1MAkDxbnncuGsQ==', crossorigin='anonymous', referrerpolicy='no-referrer')
     script (type='text/javascript').
-      let tokenData = {
-      	hash: ${"hash"}
-      	tokenId: ${tokenId}
-      }
+      #{data}
     script (type='text/javascript').
       #{script}
     script (src='https://code.jquery.com/jquery-3.5.1.slim.min.js', integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj', crossorigin='anonymous')
