--- a/views/projectDetails.pug
+++ b/views/projectDetails.pug
@@ -17,6 +17,7 @@ html
     p Token Ids: #{tokensOfProject}
     p Active? #{active}
     p Paused? #{paused}
+    p Locked? #{locked}
     hr
     p #[strong Script:]
     pre #{script}
